config-module/build/generated-manifests/destination-rules/serviceBDestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: serviceB-destination-rule
  namespace: default
spec:
  host: serviceB.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 50
        http2MaxRequests: 100
  subsets:
    - name: serviceCValue
      labels:
        version: serviceCValue
    - name: serviceDValue
      labels:
        version: serviceDValue
